--- a/flooding_lib/tools/exporttool/templates/export/exports_new.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_new.html
@@ -40,6 +40,9 @@
 	      {{form.export_period_of_increasing_waterlevel}}
 	      {{form.export_period_of_increasing_waterlevel.label_tag}}
 	  <br>
+              {{form.export_inundation_sources}}
+              {{form.export_inundation_sources.label_tag}}
+          <br>
 	</td>
       </tr>
       <tr>
