Squashed commit of the following:
commit cf9e5726ee0b495ee3fc0891ec63d4f3227e2140
Author: AlexandrSeleznev <a.seleznev@hotmail.nl>
Date:   Mon Oct 21 13:38:11 2013 +0200

    Use not archived scenarios for ror-export.

--- a/flooding_lib/templates/flooding/archiveform.html
+++ b/flooding_lib/templates/flooding/archiveform.html
@@ -5,7 +5,7 @@
     <table>
       <tr>
 	<td>{{ form.archived }}</td>
-	<td>{{ form.archived.label_tag}}:</td>
+	<td>{{ form.archived.label_tag}}</td>
       </tr>
     </table>
     <p>&nbsp;</p>
