Apply permissions to archive functionality.

--- a/flooding_lib/templates/flooding/archiveform.html
+++ b/flooding_lib/templates/flooding/archiveform.html
@@ -20,5 +20,7 @@
       </tr>
     </table>
     <br>
-   <input type="submit" value="{% trans 'Save' %}" />
+    
+   <input type="submit" value="{% trans 'Save' %}" 
+	  {% if form.can_edit.value == 'no' %} DISABLED {% endif %}/>
 </form>
