--- a/flooding_lib/templates/flooding/select_strategy.html
+++ b/flooding_lib/templates/flooding/select_strategy.html
@@ -26,48 +26,44 @@
 <script>
 
     /************************Form**********************************/
-	isc.DataSource.create({
+    isc.DataSource.create({
 	    ID:"dsPostScenario",
 	    dataFormat:"json",
 	    dataURL: '{% url root_url %}flooding/service/',
         requestProperties: { httpMethod: "POST" },
 	    autoDraw:false
 	});
-
-    
  
-	 isc.ListGrid.create({
+	isc.ListGrid.create({
     	ID:"listStrategies",
     	data: [
     	{% for strategy in strategies %}
-    		{select: false, id:{{ strategy.id }},name: "{{ strategy.name }}", user: "{{ strategy.user.get_full_name }}", creation_date: "{{ strategy.save_date|date:'d-m-y H:i' }}"}
-    		{% if not last %}
-    		,
-    		{% endif %}
+            {id:{{ strategy.id }},
+             name: "{{ strategy.name }}",
+             user: "{{ strategy.user.get_full_name }}",
+             creation_date: "{{ strategy.save_date|date:'d-m-y H:i' }}"}
+    	     {% if not last %} , {% endif %}
     	{% endfor %}
     	],
-		width:'100%',
-		height:'80%',
-		margin:5,
-		selectionAppearance:"checkbox",
-   		clientOnly:true,
-   		canEdit: true,
-	    editEvent: "click",
-	    modalEditing:true,
-	    bodyOverflow: "visible",
-	    leaveScrollbarGap: false,   		
-		fields:[//project
-       		{name: "id",title: "id",type: "number",canEdit: false,primaryKey:true,width:1, hidden:true},
-       		{name: "select", title: "selecteer", type: "boolean", width:55 , canEdit: true},  
-       		{name: "name", title: "naam", type: "text", canEdit: false}, 
-       		{name: "user",title: "aangemaakt door",type: "text", canEdit: false, width:100},
-       		{name: "creation_date",title: "aangemaakt op",type: "date", canEdit: false,width:80}		
+	width:'99%',
+	height:'80%',
+	margin:5,
+	selectionAppearance:"checkbox",
+   	clientOnly:true,
+   	canEdit: true,
+	editEvent: "click",
+	modalEditing:true,
+	bodyOverflow: "visible",
+	leaveScrollbarGap: false,   		
+	fields:[
+            {name: "id", title: "id", type: "number" ,primaryKey:true, hidden:true, showIf: "false"},
+            {name: "name", title: "naam", type: "text", canEdit: false}, 
+       	    {name: "user",title: "aangemaakt door",type: "text", canEdit: false, width:100},
+       	    {name: "creation_date",title: "aangemaakt op",type: "date", canEdit: false,width:80}		
         ],
     	autoDraw:false    	
- 	});
+ });
  	
-
-
     isc.IButton.create({
         ID: "buttonSubmitLoad",
         title: "Laad maatregelen",
@@ -77,45 +73,41 @@
         width: 150,
         click: function() {
             var selected_strategies = [];
-            var endRow = listStrategies.data.getLength();
-            for (var i = 0; i < endRow ; i++ ){
-                if (listStrategies.data[i].select)
-                {                     
-                    selected_strategies.push(listStrategies.data[i].id)                    
-                }            	
-                
+            var selection = listStrategies.getSelection();
+            for (var i = 0; i < selection.length ; i++ ){
+		debugger;
+                selected_strategies.push(selection[i].id);            
             }
             
-            if (selected_strategies.length > 0)
-            	{RPCManager.sendRequest({
-							 actionURL: '{% url root_url %}flooding/service/',
-							 useSimpleHttp: true,
-							 showPrompt:true,	    					 					 
-							 httpMethod: "POST",			 
-							 params: {action: 'post_load_strategies', 
-							          current_strategy: strategyId, 
-							 		  strategies: selected_strategies.join(";")}, 
-							 callback: function(response, data, request){
-				                var data = JSON.parse(data);
-				                if (response.httpResponseCode == 200) {				                	
-				                    console.log("Data ophalen gelukt.");
-				                    existing_embankments_layer.redraw();
-				                    
-				                    for (var i=0 ; i < data.measures.length; i++) {
-				                    	var record = data.measures[i]
-				                    	listMeasures.data.addAt(record);
-				                    
-				                    }
-				                loadStrategyWindow.closeClick();
-				                } 
-				                else {				                    
-				                    console.log("Fout bij het opslaan van gegevens.");                   
-				                }
-				            }
-				        });
-		        }		
-            
-        },
+            if (selected_strategies.length > 0){
+                RPCManager.sendRequest(
+                    {
+                        actionURL: '{% url root_url %}flooding/service/',
+                        useSimpleHttp: true,
+		        showPrompt:true,	    					 					 
+		        httpMethod: "POST",			 
+		        params: {action: 'post_load_strategies', 
+		        current_strategy: strategyId, 
+		        strategies: selected_strategies.join(";")
+                    }, 
+		    callback: function(response, data, request){
+                        var data = JSON.parse(data);
+			if (response.httpResponseCode == 200) {				                	
+			    console.log("Data ophalen gelukt.");
+			    existing_embankments_layer.redraw();
+			                   
+			    for (var i=0 ; i < data.measures.length; i++) {
+			        var record = data.measures[i]
+				listMeasures.data.addAt(record);
+			    }
+			    loadStrategyWindow.closeClick();
+			}  else {				                    
+			   console.log("Fout bij het opslaan van gegevens.");                   
+			}
+		    }
+		});
+	}		    
+      },
         autoDraw: false
     });
     
